# RPI-Pico-Cam

./: README.md
Arducam/: arducam_demo.c
Arducam/src/: CMakeLists.txt  arducam.c  arducam.h  ov2640.h
arducam_demo/: CMakeLists.txt
arducam_demo/Arducam/: CMakeLists.txt
arducam_demo/Arducam/src/: arducam.c
rp2040_hm01b0/: CMakeLists.txt  README.md  main.c
rp2040_hm01b0/arducam/: arducam.c  hm01b0_init.h  ov2640_init.h
rp2040_hm01b0/display/: preview.pde
rp2040_hm01b0_st7735/: CMakeLists.txt  README.md  main.c
rp2040_hm01b0_st7735/arducam/: arducam.c  arducam.h
tflmicro/: CMakeLists.txt  README.md
tflmicro/Arducam/src/: CMakeLists.txt  arducam.c  arducam.h  ov2640.h
tflmicro/examples/person_detection/: CMakeLists.txt  detection_responder.cpp  image_provider.cpp  image_provider_benchmark.cpp  main_functions.cpp
tflmicro/examples/person_detection_screen/: CMakeLists.txt  image_provider.cpp  main_functions.cpp
tflmicro/examples/person_detection_screen/lib/arducam_s/: CMakeLists.txt  arducam_s.c  arducam_s.h  hm01b0_init.h
tflmicro/person_detection_display/: person_detection_display.pde
tflmicro/src/tensorflow/lite/micro/: micro_utils.h
